fix transition on safari

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
@@ -5640,9 +5640,9 @@ button.close {
   position: relative;
   margin: 0px auto;
   z-index: 1;
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  perspective: 1000;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  perspective: 1000px;
 }
 #f1_container {
   width: 119px;
